Added receive a code from a client

--- a/pages/index.html
+++ b/pages/index.html
@@ -67,7 +67,7 @@
         $.ajax({
           url: "/test",
           type: "POST",
-          data: value,
+          data: {code: value},
           success: function(msg) {
             alert(msg);
           },
