--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,20 @@
     />
     <link rel="stylesheet" href="/theme/dracula.css" />
     <link rel="stylesheet" href="/theme/monokai.css" />
-
+    <style type="text/css">
+      table {
+        width: 300px; /* Ширина таблицы */
+        border-collapse: collapse; /* Убираем двойные линии между ячейками */
+      }
+      td,
+      th {
+        padding: 3px; /* Поля вокруг содержимого таблицы */
+        border: 1px solid black; /* Параметры рамки */
+      }
+      th {
+        background: #b0e0e6; /* Цвет фона */
+      }
+    </style>
     <script src="/mode/javascript/javascript.js"></script>
     <script src="/mode/clike/clike.js"></script>
   </head>
@@ -29,6 +42,7 @@
       />
     </div>
 
+    <div id="results-table"></div>
     <form
       enctype="multipart/form-data"
       id="upload-container"
@@ -67,9 +81,38 @@
         $.ajax({
           url: "/test",
           type: "POST",
-          data: {code: value},
-          success: function(msg) {
-            alert(msg);
+          data: { code: value },
+          success: function(verdicts) {
+            // alert(verdicts);
+            let table = `
+               <table>
+                    <thead>
+                         <th>Название</th>
+                         <th>Статус</th>
+                         <th>Сообщение</th>
+                    </thead>
+                    <tbody>`;
+            verdicts = JSON.parse(verdicts);
+            verdicts.forEach(verdict => {
+              table += `<tr>
+                    <td>${verdict.name}</td>
+                    `;
+              if (verdict.status === "OK") {
+                table += `<td style='color: green;'>${verdict.status}</td>`;
+              } else {
+                table += `<td style='color: red;'>${verdict.status}</td>`;
+              }
+              let message = '';
+              if (verdict.message) {
+                   message = verdict.message;
+              }
+              table += `<td>${message}</td>
+                    `;
+            });
+            table += `
+                    </tbody>
+               </table>`;
+            $("#results-table").html(table);
           },
           error: function(xhr, status, error) {
             alert("Ошибка выполнения");
